@startuml EduTrack-ERD
' EduTrack Entity Relationship Diagram (PlantUML / crow's-foot notation)
' Source of truth: JPA entities in backend/.../entity/. Tables auto-generated by Hibernate.
' Render in WebStorm/IntelliJ PlantUML plugin (needs Graphviz 'dot' installed for ER/class diagrams).

hide circle
skinparam linetype ortho

entity "roles" as roles {
  * id : int <<PK>>
  --
  * name : varchar <<UK>>
}

entity "users" as users {
  * id : int <<PK>>
  --
  * email : varchar <<UK>>
  * passwordhash : varchar
  * firstname : varchar
  * lastname : varchar
  * roleid : int <<FK>>
  profile_picture : bytea
  profile_picture_type : varchar
  bio : varchar
}

entity "schools" as schools {
  * id : int <<PK>>
  --
  * name : varchar
  address : text
  type : varchar <<enum SchoolType>>
  directorid : int <<FK users>>
  student_limit : int
}

entity "classes" as classes {
  * id : int <<PK>>
  --
  * name : varchar
  * schoolyear : varchar
  * schoolid : int <<FK>>
}

entity "teachers" as teachers {
  * userid : int <<PK, FK users (@MapsId)>>
  --
  schoolid : int <<FK>>
  salary : decimal
}

entity "students" as students {
  * userid : int <<PK, FK users (@MapsId)>>
  --
  schoolid : int <<FK>>
  classid : int <<FK>>
  profileid : int <<FK>>
  parentid : int <<FK users>>
}

entity "subjects" as subjects {
  * id : int <<PK>>
  --
  * name : varchar <<UK>>
}

entity "teacher_qualifications" as teacher_qualifications {
  * teacherid : int <<PK, FK teachers>>
  * subjectid : int <<PK, FK subjects>>
}

entity "schedules" as schedules {
  * id : int <<PK>>
  --
  * schoolid : int <<FK>>
  * classid : int <<FK>>
  * subjectid : int <<FK>>
  * teacherid : int <<FK>>
  * term : int
  * dayofweek : int
  * starttime : time
  * endtime : time
  * lecture_type : varchar <<enum>>
  * track_attendance : boolean
}

entity "grades" as grades {
  * id : int <<PK>>
  --
  * studentid : int <<FK>>
  * scheduleid : int <<FK>>
  * value : decimal
  createdat : timestamp
}

entity "absences" as absences {
  * id : int <<PK>>
  --
  * studentid : int <<FK>>
  * scheduleid : int <<FK>>
  * date : date
  isexcused : boolean
}

entity "complaints" as complaints {
  * id : int <<PK>>
  --
  * studentid : int <<FK>>
  * scheduleid : int <<FK>>
  * description : varchar
  * date : date
}

entity "school_events" as school_events {
  * id : int <<PK>>
  --
  title : varchar
  description : varchar
  date : date
  type : varchar <<enum EventType>>
  schoolid : int <<FK>>
  classid : int <<FK>>
  created_by : int <<FK users>>
  created_at : timestamp
}

entity "school_profiles" as school_profiles {
  * id : int <<PK>>
  --
  * schoolid : int <<FK>>
  * name : varchar
}

entity "school_schedule_entries" as school_schedule_entries {
  * id : int <<PK>>
  --
  * schoolid : int <<FK>>
  * type : varchar
  * label : varchar
  * start_time : time
  * end_time : time
  event_date : date
  * sort_order : int
}

entity "school_term_configs" as school_term_configs {
  * id : int <<PK>>
  --
  schoolid : int <<FK, one-to-one>>
}

' ---- Relationships (|| = one, o{ = zero-or-many, o| = zero-or-one) ----
roles ||--o{ users : has

users ||--o| teachers : is-a
users ||--o| students : is-a
users ||--o| schools  : directs
users ||--o{ students : parent-of
users ||--o{ school_events : created

schools ||--o{ classes : has
schools ||--o{ teachers : employs
schools ||--o{ students : enrolls
schools ||--o{ schedules : has
schools ||--o{ school_profiles : offers
schools ||--o{ school_events : hosts
schools ||--o{ school_schedule_entries : defines
schools ||--o| school_term_configs : configured-by

classes ||--o{ students : contains
classes ||--o{ schedules : scheduled-in
classes ||--o{ school_events : targets

school_profiles ||--o{ students : tracks

subjects ||--o{ schedules : taught-as
subjects ||--o{ teacher_qualifications : qualifies
teachers ||--o{ teacher_qualifications : qualified-in
teachers ||--o{ schedules : teaches

schedules ||--o{ grades : graded-in
schedules ||--o{ absences : absence-in
schedules ||--o{ complaints : complaint-in

students ||--o{ grades : receives
students ||--o{ absences : has
students ||--o{ complaints : subject-of

@enduml
